--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -17,7 +17,7 @@
 
 <div class="article">
     <!-- Story title -->
-    <h2>@Shared.FormatTitle(story.title)
+    <h2><a class="permalink-anchor" href="news?article=@storyId">#</a>@story.title
         <!-- Stars -->
         <span id="star-@storyId" class="metadata metadata-indicator metadata-title" title="Stars">
             <icon class="@starClass"
