Markdown font sizes

--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -86,6 +86,10 @@ $normal-font-size-win: 11pt;
 $small-font-size-win: 10.5pt;
 $small-font-line-height-win: 20pt;
 $small-font-letter-spacing-win: 0;
+$code-font-size: 12px;
+$code-font-size-win: 12px;
+$code-font-line-height: 20px;
+$code-font-line-height-win: 20px;
 
 /*
  * Scalars
