Use canvas template and fix metadata loading

--- a/src/Styles/_markdown.scss
+++ b/src/Styles/_markdown.scss
@@ -113,3 +113,13 @@ pre {
 .pl-mo {
     color: #1d3e81
 }
+
+.view-3d-portrait-small canvas {
+    width: 150px;
+    height: 300px;
+}
+
+.view-3d-square-small canvas {
+    width: 150px;
+    height: 150px;
+}
