Adjust canvas style

--- a/src/Styles/_markdown.scss
+++ b/src/Styles/_markdown.scss
@@ -122,6 +122,8 @@ pre {
 .square-3d-small {
     width: 125px;
     height: 125px;
+    margin-top: 10px;
+    margin-bottom: -10px;
 }
 
 .portrait-3d-large {
