--- a/src/Styles/_markdown.scss
+++ b/src/Styles/_markdown.scss
@@ -114,24 +114,39 @@ pre {
     color: #1d3e81
 }
 
+@mixin view-3d-spacing() {
+    margin-top: 10px;
+    margin-bottom: -10px;
+}
+
 .portrait-3d-small {
+    @include view-3d-spacing();
     width: 125px;
     height: 200px;
 }
 
 .square-3d-small {
+    @include view-3d-spacing();
     width: 125px;
     height: 125px;
-    margin-top: 10px;
-    margin-bottom: -10px;
 }
 
 .portrait-3d-large {
+    @include view-3d-spacing();
     width: 300px;
     height: 450px;
 }
 
 .square-3d-large {
+    @include view-3d-spacing();
     width: 300px;
     height: 300px;
+}
+
+.align-left {
+    float: left;
+}
+
+.align-right {
+    float: right;
 }
