--- a/src/Styles/_markdown.scss
+++ b/src/Styles/_markdown.scss
@@ -114,31 +114,32 @@ pre {
     color: #1d3e81
 }
 
-@mixin view-3d-spacing() {
+@mixin view-3d-base() {
+    cursor: all-scroll;
     margin-top: 10px;
     margin-bottom: -10px;
 }
 
 .portrait-3d-small {
-    @include view-3d-spacing();
+    @include view-3d-base();
     width: 125px;
     height: 200px;
 }
 
 .square-3d-small {
-    @include view-3d-spacing();
+    @include view-3d-base();
     width: 125px;
     height: 125px;
 }
 
 .portrait-3d-large {
-    @include view-3d-spacing();
+    @include view-3d-base();
     width: 300px;
     height: 450px;
 }
 
 .square-3d-large {
-    @include view-3d-spacing();
+    @include view-3d-base();
     width: 300px;
     height: 300px;
 }
