--- a/src/Views/Index.cshtml
+++ b/src/Views/Index.cshtml
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <!--
-┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
-┃   ______    __   |                                    ┃
-┃  |  __  |  |  |  |                                    ┃
-┃  | |  | |  |  |  |                                    ┃
-┃  | !__! |  |  |  |                                    ┃
-┃  !______!  !__!  |  binary : tech art                 ┃
-┃                                                       ┃
-┃  Copyright (C) 2017 Valeriy Novytskyy                 ┃
-┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
+╔═              ═╗       design by                        ╥
+║     ######     ║                                        ║
+║   ##########   ║       ╔════╕ ╔════╗ ╥    ╥ ╒════╗ ╔════╣
+║   ##  ##  ##   ║       ╚════╗ ║    ║ ║    ║ ╔════╣ ║    ║
+║   ##########   ║            ║ ║    ║ ║    ║ ║    ║ ║    ║
+║      ####      ║       ╘════╝ ╚════╣ ╚════╝ ╚════╝ ╚════╝
+╚═              ═╝  ════             ╨
 -->
 <!--[if lt IE 7]>   <html class="ie lt-ie10 lt-ie9 lt-ie8 lt-ie7" lang="en" data-ng-app="zeroApp" data-user-agent> <![endif]-->
 <!--[if IE 7]>      <html class="ie lt-ie10 lt-ie9 lt-ie8" lang="en" data-ng-app="zeroApp" data-user-agent> <![endif]-->
