Adjust foreground color

--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -29,7 +29,7 @@ $accent-highlight-color: mix($accent-light-color, white, 45%);
 $accent-hover-color: #D7DFE0;
 $accent-text-color: #127191;
 
-$foreground-color: #333333;
+$foreground-color: #3b4a51;
 $background-color: #FFFFFF;
 $border-color: lightgray;
 $selection-color: #C3C3C3;
