--- a/src/Styles/zero.scss
+++ b/src/Styles/zero.scss
@@ -12,6 +12,9 @@
 
 @import "shared";
 @import "social";
+@import "tags";
 @import "markdown";
 @import "tooltip";
+@import "navigation";
+@import "button.primary";
 @import "media.desktop";
