--- a/src/Styles/zero.scss
+++ b/src/Styles/zero.scss
@@ -12,9 +12,18 @@
 
 @import "shared";
 @import "social";
+@import "links";
 @import "tags";
+@import "icons";
 @import "markdown";
 @import "tooltip";
+@import "forms";
+@import "metadata";
+@import "comments";
+@import "register";
 @import "navigation";
+@import "button.inline";
 @import "button.primary";
+@import "attributes";
+@import "popup";
 @import "media.desktop";
