In-progress directive and styles

--- a/src/Styles/_button.inline.scss
+++ b/src/Styles/_button.inline.scss
@@ -1,6 +1,6 @@
 .button-inline {
   color: $secondary-text-color;
-  background: $background-color;
+  background: transparent;
   cursor: pointer;
   padding: 0;
   margin-bottom: 8pt;
