--- a/src/Styles/zero.scss
+++ b/src/Styles/zero.scss
@@ -11,7 +11,6 @@
 \*---------------------------------------------------------*/
 
 @import "shared";
-@import "social";
 @import "links";
 @import "tags";
 @import "icons";
@@ -24,6 +23,8 @@
 @import "navigation";
 @import "button.inline";
 @import "button.primary";
+@import "social";
+@import "date.selector";
 @import "attributes";
 @import "popup";
 @import "media.desktop";
