Add state and sample data

--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -146,3 +146,13 @@
     right: 10px;
     top: 50%;
 }
+
+.date-selector-page-numbers div {
+    width: 48px;
+    background: red;
+}
+
+.date-selector-dates div {
+    width: 48px;
+    background: orange;
+}
