Timeline ui in progress

--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -65,8 +65,8 @@ $heading-font-size-medium: 13pt;
 $heading-font-size-small: 12pt;
 $heading-font-size-smaller: 11.5pt;
 
-$normal-font: "Open Sans", "-apple-system", BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
-$normal-font-size: 11.5pt;
+$normal-font: "Open Sans", Verdana, Arial, sans-serif;
+$normal-font-size: 12pt;
 $navigation-font-size: 10pt;
 
 $small-font: "Segoe UI", Verdana, sans-serif;
