--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -1,6 +1,5 @@
 .date-selector {
     position: relative;
-    width: 100%;
     height: 85px;
 }
 
@@ -36,6 +35,7 @@
 
 .date-selector-collapsed {
     height: 34px;
+    width: 100%;
 
     .date-selector-heading:before {
         content: '+ ';
@@ -77,6 +77,7 @@
     position: absolute;
     width: 23px;
     height: 32px;
+    bottom: 15px;
 }
 
 .date-selector-scroll.pushed {
@@ -139,21 +140,20 @@
 
 .date-selector-scroll-left {
     left: 10px;
-    top: 50%;
 }
 
 .date-selector-scroll-right {
     right: 10px;
-    top: 50%;
 }
 
 .date-selector-pages {
     position: absolute;
-    left: 33px;
-    right: 33px;
+    left: 35px;
+    right: 35px;
     bottom: 7px;
     font-family: $small-font;
     font-size: $small-font-size;
+    z-index: 200;
 }
 
 .os-win .date-selector-pages {
@@ -161,14 +161,15 @@
 }
 
 .date-selector-page-numbers {
-    width: 100%;
-    height: 18px;
+    height: 16px;
     overflow: hidden;
 }
 
 .date-selector-page-numbers div {
+    position: relative;
     float: left;
-    width: 48px;
+    min-width: 80px;
+    max-width: 80px;
     text-align: center;
     cursor: pointer;
 }
@@ -177,19 +178,13 @@
     position: absolute;
     left: 0;
     top: 0;
+    stroke: $secondary-text-color;
     z-index: -1;
 }
 
-.date-selector-page-numbers div > div {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-}
-
 /* bordered facing up */
-.date-selector-page-numbers div:nth-child(odd) {
-    position: relative;
+.date-selector-page-numbers div:nth-child(odd) > svg {
+    visibility: hidden;
 }
 
 .date-selector-page-numbers div:nth-child(odd):hover {
@@ -201,14 +196,32 @@
 }
 
 .date-selector-dates {
-    width: 100%;
-    height: 18px;
+    font-size: 9pt;
+    height: 16px;
+    margin-top: -1px;
     overflow: hidden;
 }
 
-/* bordered facing down */
-.date-selector-dates div:nth-child(even) {
+.date-selector-dates div {
+    position: relative;
+    float: left;
+    min-width: 80px;
+    max-width: 80px;
+    text-align: center;
+    cursor: pointer;
+}
 
+.date-selector-dates div > svg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    stroke: $secondary-text-color;
+    z-index: -1;
+}
+
+/* bordered facing down */
+.date-selector-dates div:nth-child(even) > svg {
+    visibility: hidden;
 }
 
 .date-selector-dates div:nth-child(even):hover {
