Fix main full width

--- a/src/Styles/_media.desktop.scss
+++ b/src/Styles/_media.desktop.scss
@@ -143,6 +143,7 @@ nav:after {
 main {
   float: left;
   position: relative;
+  width: calc(100% - 22px);
   margin-left: 22px;
   font-family: $normal-font;
   font-size: $normal-font-size;
