Verdana font stack for headings

--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -59,7 +59,7 @@ $title-font-weight: normal;
 
 /* Helvetica Neue is available only on Mac */
 /* Calibri is available only on PC */
-$heading-font: "Open Sans", "Helvetica Neue", Calibri, sans-serif;
+$heading-font: "Open Sans", "Helvetica Neue", Verdana, sans-serif;
 $heading-font-size-large: 13.5pt;
 $heading-font-size-medium: 13pt;
 $heading-font-size-small: 12pt;
