Social tooltip distance

--- a/src/Views/News/Index.cshtml
+++ b/src/Views/News/Index.cshtml
@@ -180,6 +180,7 @@
                     name="authenticationScheme"
                     data-tooltip="// login with @loginProvider.DisplayName"
                     data-tooltip-offset-x="-4"
+                    data-tooltip-offset-y="6"
                     data-ng-show="!news.user"
                     data-ng-click="news.login()"
                     data-fade>
