--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -77,7 +77,7 @@
     position: absolute;
     width: 23px;
     height: 32px;
-    bottom: 15px;
+    bottom: 10px;
 }
 
 .date-selector-scroll.pushed {
@@ -148,86 +148,78 @@
 
 .date-selector-pages {
     position: absolute;
-    left: 35px;
-    right: 35px;
-    bottom: 7px;
+    left: 28px;
+    right: 25px;
+    bottom: 10px;
+    height: 32px;
     font-family: $small-font;
     font-size: $small-font-size;
     z-index: 200;
+    overflow: hidden;
 }
 
 .os-win .date-selector-pages {
   font-size: $small-font-size-win;
 }
 
-.date-selector-page-numbers {
-    height: 16px;
-    overflow: hidden;
-}
-
-.date-selector-page-numbers div {
+.date-selector-page {
     position: relative;
     float: left;
-    width: 80px;
-    text-align: center;
-    line-height: 16px;
+    width: 31px;
+    height: 32px;
+    padding-left: 3px;
+    padding-top: 8px;
+    margin-right: -8px;
     cursor: pointer;
 }
 
-.date-selector-page-numbers div > div {
-    padding-left: 4px;
+.page-button-highlight {
+    stroke: $background-color;
 }
 
-.date-selector-page-numbers div > svg {
-    position: absolute;
-    left: 0;
-    top: 0;
-    stroke: $secondary-text-color;
-    z-index: -1;
+.page-button-shadow {
+    stroke: $shadow-color;
 }
 
-/* bordered facing up */
-.date-selector-page-numbers div:nth-child(odd) > svg {
-    visibility: hidden;
-}
-
-.date-selector-page-numbers div:nth-child(odd).selected {
-
-}
-
-.date-selector-dates {
-    font-size: 9pt;
-    height: 16px;
-    margin-top: -1px;
-    overflow: hidden;
-}
-
-.date-selector-dates div {
-    position: relative;
-    float: left;
-    width: 80px;
+.date-selector-page-label {
     text-align: center;
-    line-height: 16px;
-    cursor: pointer;
 }
 
-.date-selector-dates div > div {
-    padding-left: 4px;
+.date-selector-page-border {
+    position: absolute;
+    stroke: $secondary-text-color;
+    left: 0;
+    top: 0;
 }
 
-.date-selector-dates div > svg {
+.date-selector-page-background,
+.date-selector-page-hover,
+.date-selector-page-pushed
+ {
     position: absolute;
     left: 0;
     top: 0;
-    stroke: $secondary-text-color;
+}
+
+.date-selector-page-background {
     z-index: -1;
 }
 
-/* bordered facing down */
-.date-selector-dates div:nth-child(even) > svg {
-    visibility: hidden;
+.date-selector-page-background:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: red;
+    box-shadow: 0 $border-thickness ($border-thickness * 2) $drop-shadow-dark-color;
 }
 
-.date-selector-dates div:nth-child(even).selected {
+.date-selector-page-hover {
+
+}
+
+.date-selector-page-pushed {
 
 }
