--- a/src/Styles/_attributes.scss
+++ b/src/Styles/_attributes.scss
@@ -24,3 +24,12 @@
 .emphasis {
   color: $primary-color;
 }
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari*/
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
