Fix layout on PC

--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -242,7 +242,7 @@
 .date-selector-page-label {
     position: absolute;
     text-align: center;
-    top: 20%;
+    top: 5px;
     left: 7px;
     pointer-events: none;
 }
